--- a/src/components/page/page.css
+++ b/src/components/page/page.css
@@ -1,15 +1,11 @@
 body {
-  width: 100%;
+  width: 95%;
   padding: 2%;
   background-color: #262626;
 }
 
-.title,
-.text {
-  margin: 0;
-}
-
 .container {
+  width: 99%;
   display: flex;
   justify-content: space-between;
 }
@@ -17,12 +13,21 @@ body {
 .textContainer {
   flex: 8;
   color: #ffffff;
-  font-size: 2.5em;
+}
+
+.title,
+.text {
+  margin: 0;
+  font-size: 4em;
+}
+
+.paragraph {
+  font-size: 1.5em;
 }
 
 .langContainer {
   display: flex;
-  flex: 2;
+  flex: 1.5;
   flex-direction: column;
 }
 
@@ -34,22 +39,30 @@ body {
 }
 
 @media screen and (max-width: 480px) {
-    .container {
-        flex-direction: column;
-    }
+  .container {
+    flex-direction: column;
+  }
 
-    .textContainer {
-        padding: 40px;
-        font-size: 1em;
-    }
+  .textContainer {
+    padding: 20px 40px;
+  }
 
-    .langContainer {
-        flex-direction: row;
-        justify-content: center;
-        gap: 40px;
-    }
+  .title,
+  .text {
+    font-size: 2em;
+  }
 
-    .langButton {
-        width: 50px;
-    }
+  .paragraph {
+    font-size: 1em;
+  }
+
+  .langContainer {
+    flex-direction: row;
+    justify-content: center;
+    gap: 40px;
+  }
+
+  .langButton {
+    width: 50px;
+  }
 }
